# ga-maximum

./: .gitignore  Evolutie.txt  README.md  tema-lab.cabal
app/: Main.hs
