cabal-version:      3.0
name:               tema-lab
version:            0.1.0.0
license:            NONE
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable tema-lab
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0,
                      random
    hs-source-dirs:   app
    default-language: Haskell2010
